# comet

./: .gitignore  Cargo.toml  README.md  antigravity.nix  check_output.txt  checklist.md  cuda.nix  run_test.py  shell.nix
artifacts/: implementation_plan.md  walkthrough.md
clean-language-report/Info/: clean-language-report-info.txt
clean-language-report/doc/: CleanLanguageReport.html
cli/: Cargo.toml  build.rs
cli/src/: bruteforce.rs  main.rs  search.rs  transformer.rs  weights.rs
codegen/: Cargo.toml
codegen/src/: codegen.rs  dag.rs  ir.rs  lib.rs  sequence.rs
comet_examples/: README.md  TODO.md  sample.cm  spec_test_v2.cm  stdlib.cm  test_basic.cm  test_complex.cm  test_complex.md  test_divide.cm  test_grammar.cm  test_min.cm  test_minimal.cm  test_simple.cm
comet_examples/data/: data.cm  universe.cm
data/: Cargo.toml
data/src/: gbm.rs  main.rs  plan.md  util.rs  vasicek.rs
docs/: 01_design.md  02_lex.md  03_parse.md  04_ast.md  05_synthesis.md  06_compile.md  06_compile_modify.md  NOTE.md  agent.md  ast.md  behavior_search.md  comet.md  compile.md  data.md  example.cm  fixme.md  implementation.md  lex.md  parse.md  review.md  runtime.md  sequence.md  spec.md  stdlib.md  synthesis.md  transform.md
examples/: behavior_1.cm  behavior_1.md  behavior_1.rs  behavior_2.cm  behavior_2.rs  behavior_3.cm  behavior_4.cm  consume_minimal.cm  context_1.cm  context_1.rs  depth_minimal.cm  minimal_1.cm  minimal_1.rs  multiple_variants_minimal.cm  multiple_variants_weighted.cm  pattern_matching_minimal.cm  various_functions.cm  wrds_1.cm
old/: operators.py
parser/: Cargo.toml
parser/src/: ast.rs  behavior.md  behavior.rs  expr.rs  grammar.pest  lib.rs  parser.rs  polish.rs  program.rs  todo.md  types.rs
py/: Cargo.toml  build.sh  lib.rs  model.py  test.py  test.sh  train_ppo.py  train_ppo.txt  train_ppo_01.py  train_ppo_01.txt  train_ppo_02.py.bak  train_ppo_02.txt
result/: complexity_risk.ipynb  diversity.ipynb  transition.ipynb  util.py
results/: Cargo.toml  INSTALL.md  README.md  summary.01.md
results/src/: soln_sample.rs
rl/: Cargo.toml  scratch.rs
rl/src/: action.rs  embed.rs  env.md  env.rs  lib.rs  loss.rs  model.md  model.rs  model_transformer.rs  polish.rs  pool.rs  reward.rs  rl.md  rl.rs  search.md  search.rs  state.rs  supervised.rs  synthesis.rs  train.rs  trajectory.rs
runtime/: Cargo.toml
runtime/src/: ast.rs  backtest.rs  dmgr.rs  fitness.rs  lib.rs  pnl.rs  runtime.md  runtime.rs  stats.rs
src/: main.rs
src/comet/: ast.rs  codegen.rs  constraints.rs  dag.rs  grammar.pest  ir.rs  llvm_ir_example.ll  mod.rs  parser.rs  search.rs  semantics.rs  sequence.rs  symbols.rs  synthesis.rs
src/comet/behaviors/: mod.rs  normalizer.rs
src/comet/functions/: divide.rs  mod.rs  update_when.rs
src/stdlib/: TODO.md  abs.rs  add.rs  clip.rs  const.rs  consume.rs  covariance.rs  cs_rank.rs  cs_rank_nonzero.rs  cs_zscore.rs  data.rs  divide.rs  equals.rs  greater.rs  less.rs  lib.rs  max.rs  mid.rs  min.rs  multiply.rs  operators-example.py  power.rs  run_test.sh  subtract.rs  tail_to_nan.rs  test_abs.rs  test_add.ll  test_clip.rs  test_const.rs  test_covariance.rs  test_cs_rank.ll  test_cs_rank.rs  test_cs_zscore.ll  test_cs_zscore.rs  test_divide.rs  test_equals.rs  test_greater.rs  test_less.rs  test_max.rs  test_mid.rs  (+41 more)
stdlib/: .gitignore  Cargo.toml  TODO
stdlib/src/: abs.rs.bak  add.rs  clip.rs.bak  const.rs.bak  consume.rs.bak  consume_float.rs  covariance.rs.bak  cs_rank.rs  cs_rank_nonzero.rs.bak  cs_zscore.rs  cs_zscore.rs.bak  data.rs  divide.rs  equals.rs.bak  lib.rs  mid.rs.bak  min.rs.bak  multiply.rs  multiply.rs.bak  op_add.rs  op_cross_section.rs  op_cs_rank.rs  op_cs_zscore.rs  op_data.rs  op_divide.rs  op_flip.rs  op_multiply.rs  op_pow.rs  op_subtract.rs  op_time_series.rs  op_ts_argmax.rs  op_ts_argmin.rs  op_ts_corr.rs  op_ts_cov.rs  op_ts_max.rs  op_ts_mean.rs  op_ts_min.rs  op_ts_nanmean.rs  op_ts_prod.rs  op_ts_rank.rs  (+38 more)
wrds/: download.py  fields.csv  mnemonic.csv  universe_dates.csv  universe_instruments.csv
