[package]
name = "comet"
version = "0.1.0"
edition = "2024"

[lib]
name = "stdlib"
path = "src/stdlib/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
pest = "2.6"
pest_derive = "2.6"
thiserror = "1.0"
paste = "1.0"
inkwell = { version = "0.8.0", features = ["llvm15-0"] }
either = "1.15.0"

[dev-dependencies]
polars = { version = "0.53.0", features = ["abs", "diff", "dtype-datetime", "lazy", "rank", "rolling_window", "temporal"] }
