[package]
name = "data"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.10.1"
#tokio = { version = "1.37", features = ["full"] }
#reqwest = { version = "0.12", features = ["stream", "rustls-tls"], default-features = false }
#csv = "1.3"
#flate2 = "1.0"
#chrono = { version = "0.4", features = ["serde"] }
#serde = { version = "1.0", features = ["derive"] }
#futures-util = "0.3"
