[package]
name = "results"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "soln_sample"
path = "src/soln_sample.rs"

[dependencies]
parser = { path = "../parser" }
runtime = { path = "../runtime" }
rl = { path = "../rl" }
stdlib = { path = "../stdlib" }
clap = { version = "4.4", features = ["derive"] }
burn = { version = "0.20.1", features = ["cuda", "train"] }
