[package]
name = "rl"
version = "0.1.0"
edition = "2024"

[dependencies]
parser = { path = "../parser" }
# codegen = { path = "../codegen" }
runtime = { path = "../runtime" }
rand = "0.8"
inventory = "0.3.22"
stdlib = { version = "0.1.0", path = "../stdlib" }
# rl = { version = "0.4.0", features = ["gym"] }
tch = "0.24.0"
