[package]
name = "runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
codegen = { path = "../codegen" }
stdlib = { path = "../stdlib" }
parser = { path = "../parser" }
rand = "0.8"
thiserror = "1.0"
lru = "0.16.3"
csv = "1.4.0"
flate2 = "1.1.9"
inventory = "0.3.22"
burn = { version = "0.20.1", features = ["cuda", "ndarray"] }
