[package]
name = "stdlib"
version = "0.1.0"
edition = "2024"

[lib]
name = "stdlib"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
paste = "1.0"
quote = "1.0"
proc-macro2 = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
either = "1.15.0"
flate2 = "1.1.9"
csv = "1.4.0"
chrono = "0.4.39"
bevy_reflect = "0.18.0"
inventory = "0.3.22"
lru = "0.16.3"
tch = "0.22.0"

[dev-dependencies]
polars = { version = "0.53.0", features = [
    "abs",
    "diff",
    "dtype-datetime",
    "lazy",
    "rank",
    "rolling_window",
    "temporal",
] }
